Removed some more nullable warnings.

--- a/src/EoSoftware.Northwind.Web/EoSoftware.Northwind.Web.csproj
+++ b/src/EoSoftware.Northwind.Web/EoSoftware.Northwind.Web.csproj
@@ -6,7 +6,7 @@
     <PreserveCompilationContext>true</PreserveCompilationContext>
     <OutputType>Exe</OutputType>
     <WebProjectMode>true</WebProjectMode>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   
