--- a/tests/EoSoftware.Northwind.UnitTests/EoSoftware.Northwind.UnitTests.csproj
+++ b/tests/EoSoftware.Northwind.UnitTests/EoSoftware.Northwind.UnitTests.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <PreserveCompilationContext>true</PreserveCompilationContext>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
