--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -9,5 +9,6 @@
     <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.10" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.10" />
+    <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 </Project>
