--- a/src/EoSoftware.Northwind.WebApi/EoSoftware.Northwind.WebApi.csproj
+++ b/src/EoSoftware.Northwind.WebApi/EoSoftware.Northwind.WebApi.csproj
@@ -8,6 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EoSoftware.Northwind.Persistence\EoSoftware.Northwind.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
