--- a/src/EoSoftware.Northwind.WebApi/appsettings.json
+++ b/src/EoSoftware.Northwind.WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NorthwindDbContext": "Server=127.0.0.1;Port=5432;Database=Northwind;User Id=postgres;Password=GemBee001;"
+  }
 }
