--- a/src/EoSoftware.Northwind.Application/EoSoftware.Northwind.Application.csproj
+++ b/src/EoSoftware.Northwind.Application/EoSoftware.Northwind.Application.csproj
@@ -5,8 +5,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" />
+    <PackageReference Include="MediatR" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EoSoftware.Northwind.Domain\EoSoftware.Northwind.Domain.csproj" />
   </ItemGroup>
 
 </Project>
