--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -11,5 +11,6 @@
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.10" />
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageVersion Include="MediatR" Version="11.0.0" />
+    <PackageVersion Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
   </ItemGroup>
 </Project>
