--- a/src/EoSoftware.Northwind.WebApi/EoSoftware.Northwind.WebApi.csproj
+++ b/src/EoSoftware.Northwind.WebApi/EoSoftware.Northwind.WebApi.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" />
+    <PackageReference Include="MediatR" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" />
   </ItemGroup>
 
   <ItemGroup>
