--- a/src/EoSoftware.Northwind.WebApi/appsettings.json
+++ b/src/EoSoftware.Northwind.WebApi/appsettings.json
@@ -1,12 +1,25 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console" ],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Override": {
+        "Microsoft.AspNetCore": "Warning",
+        "Microsoft.EntityFrameworkCore": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "Application": "Sample"
     }
   },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
     "NorthwindDbContext": "Server=127.0.0.1;Port=5432;Database=Northwind;User Id=postgres;Password=GemBee001;"
-  }
+  },
+  "AllowedHosts": "*"  
 }
