--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -12,5 +12,7 @@
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageVersion Include="MediatR" Version="11.0.0" />
     <PackageVersion Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageVersion Include="Serilog" Version="2.12.0" />
+    <PackageVersion Include="Serilog.AspNetCore" Version="6.0.1" />
   </ItemGroup>
 </Project>
