--- a/src/EoSoftware.Northwind.WebApi/appsettings.json
+++ b/src/EoSoftware.Northwind.WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console" ],
+    "Using": [],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -15,7 +15,7 @@
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
     "Properties": {
-      "Application": "Sample"
+      "Application": "EoSoftware.Northwind.WebApi"
     }
   },
   "ConnectionStrings": {
