--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -14,5 +14,6 @@
     <PackageVersion Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageVersion Include="Serilog" Version="2.12.0" />
     <PackageVersion Include="Serilog.AspNetCore" Version="6.0.1" />
+    <PackageVersion Include="Hellang.Middleware.ProblemDetails" Version="6.5.1" />
   </ItemGroup>
 </Project>
