--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
       "request": "launch",
       "preLaunchTask": "build",
       // If you have changed target frameworks, make sure to update the program path.
-      "program": "${workspaceFolder}/src/EoSoftware.Northwind.Web/bin/Debug/net6.0/EoSoftware.Northwind.Web.dll",
+      "program": "${workspaceFolder}/src/EoSoftware.Northwind.WebApi/bin/Debug/net6.0/EoSoftware.Northwind.WebApi.dll",
       "args": [],
-      "cwd": "${workspaceFolder}/src/EoSoftware.Northwind.Web",
+      "cwd": "${workspaceFolder}/src/EoSoftware.Northwind.WebApi",
       "stopAtEntry": false,
       // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
       "serverReadyAction": {
