--- a/src/EoSoftware.Northwind.WebApi/appsettings.json
+++ b/src/EoSoftware.Northwind.WebApi/appsettings.json
@@ -5,7 +5,7 @@
       "Default": "Information",
       "Override": {
         "Microsoft.AspNetCore": "Warning",
-        "Microsoft.EntityFrameworkCore": "Warning"
+        "Microsoft.EntityFrameworkCore": "Information"
       }
     },
     "WriteTo": [
