--- a/src/EoSoftware.Northwind.WebApi/appsettings.json
+++ b/src/EoSoftware.Northwind.WebApi/appsettings.json
@@ -5,7 +5,8 @@
       "Default": "Information",
       "Override": {
         "Microsoft.AspNetCore": "Warning",
-        "Microsoft.EntityFrameworkCore": "Information"
+        "Microsoft.EntityFrameworkCore": "Information",
+        "Microsoft.Identity": "Debug"
       }
     },
     "WriteTo": [
@@ -20,6 +21,12 @@
   },
   "ConnectionStrings": {
     "NorthwindDbContext": "Server=127.0.0.1;Port=5432;Database=Northwind;User Id=postgres;Password=GemBee001;"
+  },
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "TenantId": "fa760984-8fd7-4684-940e-62c94e616725",
+    "ClientId": "d0bd9428-6816-4247-9230-611c186b5911",
+    "Scopes" : "access_via_approle_assignments"
   },
   "AllowedHosts": "*"  
 }
