--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -15,5 +15,6 @@
     <PackageVersion Include="Serilog" Version="2.12.0" />
     <PackageVersion Include="Serilog.AspNetCore" Version="6.0.1" />
     <PackageVersion Include="Hellang.Middleware.ProblemDetails" Version="6.5.1" />
+    <PackageVersion Include="Microsoft.Identity.Web" Version="1.25.10" />
   </ItemGroup>
 </Project>
